<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtAgeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10sp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/explicitActivityDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/explicitActivityDesc" />

    <TextView
        android:id="@+id/codeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        android:padding="16dp"
        android:text="@string/explicitCodeBlock"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="normal"
        android:typeface="monospace" />


</LinearLayout>