<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <TextView
        android:id="@+id/txtAgeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Input Your Age"
        android:inputType="number"
        android:saveEnabled="true"
        />
    <!--By default saveEnabled is true, when screen is flipped and it's false the data in the EditText is cleared-->

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnGoToExplicitActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_to_explicit_activity"
        android:layout_gravity="center"/>

</LinearLayout>